--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<div class="container">
+<div class="container col-sm-12 col-md-12 col-lg-11 col-xl-11">
 	<h1 class="title">Card Pokedex</h1>
 	<h4>Escribe el nombre del Pokémon que quiere buscar</h4>
 	<div class="input-group mb-3">
